--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
-CPPFLAGS= -std=c++11 -g -Wall -Wextra -O3 $(DIFFSEL_FLAGS)
-LDFLAGS = $(DIFFSEL_FLAGS)
+CPPFLAGS= --std=gnu++11 -g -Wall -Wextra -O3 $(DIFFSEL_FLAGS)
+LDFLAGS = $(DIFFSEL_FLAGS) --std=gnu++11
 
 SRCS= BranchSitePath.cpp Chrono.cpp CodonSequenceAlignment.cpp CodonStateSpace.cpp CodonSubMatrix.cpp GTRSubMatrix.cpp MSCodonSubMatrix.cpp PhyloProcess.cpp Random.cpp SequenceAlignment.cpp StateSpace.cpp SubMatrix.cpp TaxonSet.cpp Tree.cpp linalg.cpp linalg2.cpp Chain.cpp Sample.cpp
 OBJS=$(patsubst %.cpp,%.o,$(SRCS))
