--- a/src/Makefile
+++ b/src/Makefile
@@ -54,6 +54,6 @@ test: ../flatdiffsel_bin
 	cd .. ; ./flatdiffsel_bin -d data/samhd1.ali -t data/samhd1.tree -x 1 0 test
 
 clean:
-	-rm -f *.o *.d *.d.*
+	-rm -f *.o *.d *.d.* *.gcno *.gcda
 	-rm -f $(PROGS)
 
