--- a/.travis.yml
+++ b/.travis.yml
@@ -37,5 +37,5 @@ script:
   - cd src && make && make test
 
 after_success:
-  - if [ "$CXX" == "g++-5" ]; then coveralls -r src -b src -t 606Y1GaVUZbRm9agVjYbT2pns38InKSFR ; fi
+  - if [ "$CXX" == "g++-5" ]; then coveralls -t 606Y1GaVUZbRm9agVjYbT2pns38InKSFR ; fi
 
