--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ script:
   - export CXX=$COMPILER
   - $CXX -v
   - if [ "$CXX" == "g++-5" ]; then export DIFFSEL_FLAGS="-fprofile-arcs -ftest-coverage -g"; fi
-  - cd src && make && make test
+  - cd src && make && make test && cd ..
 
 after_success:
   - if [ "$CXX" == "g++-5" ]; then coveralls -t 606Y1GaVUZbRm9agVjYbT2pns38InKSFR ; fi
