--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ matrix:
           packages:
             - g++-5
       env: COMPILER=g++-5
+      after_success:
+        - if [ "$CXX" == "g++-5" ]; then bash <(curl -s https://codecov.io/bash); fi
 
     - os: linux
       dist: trusty
@@ -35,6 +37,3 @@ script:
   - $CXX -v
   - if [ "$CXX" == "g++-5" ]; then export DIFFSEL_FLAGS="-fprofile-arcs -ftest-coverage -g"; fi
   - cd src && make && make test && cd ..
-
-after_success:
-  - if [ "$CXX" == "g++-5" ]; then gcov src/* && bash <(curl -s https://codecov.io/bash); fi
