--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,11 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-5
-      env: COMPILER=g++-5
+      env:
+        - COMPILER=g++-5
+        - DIFFSEL_FLAGS="-fprofile-arcs -ftest-coverage -g"
       after_success:
-        - if [ "$CXX" == "g++-5" ]; then bash <(curl -s https://codecov.io/bash); fi
+        - bash <(curl -s https://codecov.io/bash)
 
     - os: linux
       dist: trusty
@@ -35,5 +37,4 @@ matrix:
 script:
   - export CXX=$COMPILER
   - $CXX -v
-  - if [ "$CXX" == "g++-5" ]; then export DIFFSEL_FLAGS="-fprofile-arcs -ftest-coverage -g"; fi
   - cd src && make && make test && cd ..
