--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 CPPFLAGS= --std=gnu++11 -Wall -Wextra -O3 $(DIFFSEL_FLAGS)
 LDFLAGS = $(DIFFSEL_FLAGS) --std=gnu++11 -lstdc++ -lm
 
-SRCS= BranchSitePath.cpp Chrono.cpp CodonSequenceAlignment.cpp CodonStateSpace.cpp CodonSubMatrix.cpp GTRSubMatrix.cpp MSCodonSubMatrix.cpp PhyloProcess.cpp Random.cpp SequenceAlignment.cpp StateSpace.cpp SubMatrix.cpp TaxonSet.cpp Tree.cpp linalg.cpp linalg2.cpp Chain.cpp Sample.cpp
+SRCS= BranchSitePath.cpp Chrono.cpp CodonSequenceAlignment.cpp CodonStateSpace.cpp CodonSubMatrix.cpp GTRSubMatrix.cpp MSCodonSubMatrix.cpp PhyloProcess.cpp Random.cpp SequenceAlignment.cpp StateSpace.cpp SubMatrix.cpp TaxonSet.cpp Tree.cpp linalg.cpp Chain.cpp Sample.cpp
 OBJS=$(patsubst %.cpp,%.o,$(SRCS))
 ALL_CPP=$(wildcard *.cpp)
 ALL_SRCS = $(wildcard *.cpp) $(wildcard *.hpp)
