Travis: Python3 install on osx

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ matrix:
     - os: osx
       compiler: clang
       env: COMPILER=clang++
+      after_install:
+        - ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
+        - brew install python3
 
     - os: linux
       dist: trusty
