--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(diffsel CXX)
 set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra -Wpedantic") # normal mode
 if (CMAKE_BUILD_TYPE MATCHES COVERAGE)
   message(STATUS "Compiling in coverage measurement mode")
-  set(CMAKE_CXX_FLAGS "-O0 -fprofile-arcs -ftest-coverage")
+  set(CMAKE_CXX_FLAGS "-O0 -fprofile-arcs -ftests-coverage")
 endif()
 set(CXX_FEATURES cxx_auto_type cxx_nullptr cxx_final cxx_override cxx_range_for)
 include_directories("src" "include")
@@ -52,3 +52,8 @@ target_compile_features(singleomega PRIVATE ${CXX_FEATURES})
 add_executable(multigenesingleomega "src/MultiGeneSingleOmega.cpp")
 target_link_libraries(multigenesingleomega diffsel_lib)
 target_compile_features(multigenesingleomega PRIVATE ${CXX_FEATURES})
+
+# Tests
+add_executable(tests "src/test.cpp")
+target_link_libraries(tests diffsel_lib)
+target_compile_features(tests PRIVATE ${CXX_FEATURES})
