Trying to remove diff hit requirement for codecov

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,10 +1,8 @@
 coverage:
   status:
+    patch: false
     project:
       default:
         threshold: 5
 ignore:
   - "include"
-
-comment:
-  layout: "header, tree"
