Back to clang-3.6 but trying to install STL correctly this time

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,11 +36,12 @@ matrix:
         apt:
           sources:
             - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.9
+            - llvm-toolchain-precise-3.6
           packages:
-            - clang-3.9
+            - clang-3.6
+            - libc6-dbg
       env:
-        - COMPILER=clang++-3.9
+        - COMPILER=clang++-3.6
 
 
 before_script:
