--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ matrix:
       before_install:
         - brew update
         - brew install python3
+        - pip3 install progressbar2
 
     - os: linux
       dist: trusty
@@ -46,6 +47,8 @@ matrix:
         - COMPILER=clang++-3.6
         - NONREG=true
 
+before_install:
+  - pip3 install progressbar2
 
 before_script:
   - export CXX=$COMPILER
