Corrected segfault + changed Eigen types to improve perf + formatting + added perf config to make/cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,10 @@ if (CMAKE_BUILD_TYPE MATCHES COVERAGE)
   message(STATUS "Compiling in coverage measurement mode")
   set(CMAKE_CXX_FLAGS "-O0 -fprofile-arcs -ftest-coverage")
 endif()
+if (CMAKE_BUILD_TYPE MATCHES PERF)
+  message(STATUS "Compiling in performance measurement mode")
+  set(CMAKE_CXX_FLAGS "-O2 -g -fno-omit-frame-pointer")
+endif()
 set(CXX_FEATURES cxx_auto_type cxx_nullptr cxx_final cxx_override cxx_range_for)
 include_directories("src" "utils")
 
