--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,11 @@ add_executable(diffsel "src/DiffSel.cpp")
 target_link_libraries(diffsel diffsel_lib)
 target_compile_features(diffsel PRIVATE ${CXX_FEATURES})
 
+# Simulator
+add_executable(simulator "src/Simulator.cpp")
+target_link_libraries(simulator diffsel_lib)
+target_compile_features(simulator PRIVATE ${CXX_FEATURES})
+
 # ReadDiffSel
 add_executable(readdiffsel "src/ReadDiffSel.cpp")
 target_link_libraries(readdiffsel diffsel_lib)
