sparse: completed initialization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,9 +37,9 @@ add_library (diffsel_lib STATIC ${DIFFSEL_LIB})
 target_compile_features(diffsel_lib PUBLIC ${CXX_FEATURES})
 
 # Diffsel
-add_executable(diffsel "src/DiffSel.cpp")
-target_link_libraries(diffsel diffsel_lib)
-target_compile_features(diffsel PRIVATE ${CXX_FEATURES})
+# add_executable(diffsel "src/DiffSel.cpp")
+# target_link_libraries(diffsel diffsel_lib)
+# target_compile_features(diffsel PRIVATE ${CXX_FEATURES})
 
 # DiffselSparse
 add_executable(diffselsparse "src/DiffSelSparse.cpp")
@@ -47,9 +47,9 @@ target_link_libraries(diffselsparse diffsel_lib)
 target_compile_features(diffselsparse PRIVATE ${CXX_FEATURES})
 
 # ReadDiffSel
-add_executable(readdiffsel "src/ReadDiffSel.cpp")
-target_link_libraries(readdiffsel diffsel_lib)
-target_compile_features(readdiffsel PRIVATE ${CXX_FEATURES})
+# add_executable(readdiffsel "src/ReadDiffSel.cpp")
+# target_link_libraries(readdiffsel diffsel_lib)
+# target_compile_features(readdiffsel PRIVATE ${CXX_FEATURES})
 
 # SingleOmega
 add_executable(singleomega "src/SingleOmega.cpp")
