--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-5
+            - python3
+            - python3-pip
       env:
         - COMPILER=g++-5
         - NONREG=false
@@ -43,6 +45,8 @@ matrix:
           packages:
             - clang-3.6
             - g++-5
+            - python3
+            - python3-pip
       env:
         - COMPILER=clang++-3.6
         - NONREG=true
