travis: added travis_wait to make test command to avoid coverage tests crashing the build

--- a/.travis.yml
+++ b/.travis.yml
@@ -63,5 +63,5 @@ before_script:
 script:
   - make
   - make short-tests
-  - make test
+  - travis_wait 25 make test
   # - if [ "$NONREG" = "true" ]; then make nonreg; fi
