--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ matrix:
         - NONREG=true
       before_install:
         - brew update
-        - brew install python3
+        - brew upgrade python
         - pip3 install progressbar2
 
     - os: linux
